tests/baselines/reference/parser536727.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser536727.ts (2 errors) ====
    function foo(f: (x: string) => string) {
        return f("");
    }
    var g = (x: string) => x + "blah";
    var x = () => g;
    foo(g);
    foo(() => g);
        ~~~~~~~
!!! error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
    foo(x);
        ~
!!! error TS2345: Argument of type '() => (x: string) => string' is not assignable to parameter of type '(x: string) => string'.
    